--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
       .app-flex-container {
         display: flex;
         height: 100%;
-        width: 100%;
+        margin: 0 auto;
+        /* width: 100%; */
         /* border: 2px solid red; */
         padding: 0.5em;
         font-family: "Barlow Semi Condensed", sans-serif;
+        width: clamp(60%, 1200px, 100%);
       }
 
       .left-main-column {
