missing . on a file reference (img-tag)

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               </div>
               <img
                 class="quotes"
-                src="/images/bg-pattern-quotation.svg"
+                src="./images/bg-pattern-quotation.svg"
                 alt="quotes"
               />
             </div>
